--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,10 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@stomp/stompjs": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "websocket": "^1.0.34",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
